feat(app): add conversation page
* reorganize and improve store (user & conversation)
* prepare for conversation creation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" *ngIf="currentUser | async">
   <span>SlkChat</span>
+  <span fxFlex></span>
+  <button (click)="logout()" mat-button>
+    Logout
+  </button>
 </mat-toolbar>
+
+<router-outlet></router-outlet>
