--- a/src/app/reusables/contact-list/contact-list.component.html
+++ b/src/app/reusables/contact-list/contact-list.component.html
@@ -1,5 +1,5 @@
 <mat-list *ngIf="(users$ | async) as users">
   <mat-action-list *ngFor="let user of users">
-    <button mat-list-item (click)="selectUser(user)">{{ user.fullName }}</button>
+    <button mat-list-item (click)="selectUsers([user])">{{ user.fullName }}</button>
   </mat-action-list>
 </mat-list>
