feat(app): add toolbar component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,3 @@
-<mat-toolbar color="primary" *ngIf="currentUser | async">
-  <span>SlkChat</span>
-  <span fxFlex></span>
-  <button (click)="logout()" mat-button>
-    Logout
-  </button>
-</mat-toolbar>
+<app-toolbar [currentUser]="currentUser | async"></app-toolbar>
 
 <router-outlet></router-outlet>
