--- a/src/app/reusables/slk-toolbar/toolbar.component.html
+++ b/src/app/reusables/slk-toolbar/toolbar.component.html
@@ -1,5 +1,6 @@
-<mat-toolbar color="primary" *ngIf="currentUser">
-  <span>SlkChat</span>
+<mat-toolbar *ngIf="currentUser">
+  <img src="../assets/logo_transparent.png" alt="Sleek"/>
+  <span>Sleek</span>
   <span fxFlex></span>
   <button (click)="logout()" mat-button>
     Logout
