--- a/src/app/reusables/contact-list/contact-list.component.html
+++ b/src/app/reusables/contact-list/contact-list.component.html
@@ -1,5 +1,11 @@
+<h4 class="mat-h3">Start a conversation with:</h4>
+
 <mat-list *ngIf="(users$ | async) as users">
   <mat-action-list *ngFor="let user of users">
-    <button mat-list-item (click)="selectUsers([user])">{{ user.fullName }}</button>
+    <button mat-list-item (click)="selectUsers([user])">
+      <img class="user-avatar" [src]="user?.avatarURL" alt="user avatar"/>
+      <span>{{ user.fullName }}</span>
+    </button>
   </mat-action-list>
+  <p *ngIf="!users.length">How sad. There are no users in your contact list.</p>
 </mat-list>
