--- a/src/app/reusables/toolbar/toolbar.component.html
+++ b/src/app/reusables/toolbar/toolbar.component.html
@@ -1,8 +1,10 @@
 <mat-toolbar *ngIf="currentUser">
   <img src="../assets/logo_transparent.png" alt="Sleek"/>
-  <span>Sleek</span>
+  <span>Conversations</span>
   <span fxFlex></span>
-  <button (click)="logout()" mat-button>
+  <button class="no-padding"
+          (click)="logout()"
+          mat-button>
     Logout
   </button>
 </mat-toolbar>
