--- a/src/app/pages/authentication/authentication.page.html
+++ b/src/app/pages/authentication/authentication.page.html
@@ -6,5 +6,7 @@
       <span>Sign in with Google</span>
     </button>
   </div>
+  <div class="authentication-welcome-container" fxLayout="column" fxLayoutAlign="center center">
+  </div>
 </div>
 
