--- a/src/app/reusables/contact-list/contact-list.component.scss
+++ b/src/app/reusables/contact-list/contact-list.component.scss
@@ -1,10 +1,8 @@
 button {
+  box-sizing: border-box;
   text-transform: none;
 }
 
 .user-avatar {
   margin-right: 12px;
-  border-radius: 50%;
-  width: 48px;
-  height: 48px;
 }
