--- a/src/app/reusables/toolbar/toolbar.component.scss
+++ b/src/app/reusables/toolbar/toolbar.component.scss
@@ -1,7 +1,17 @@
 mat-toolbar {
-  img {
+  .logo {
     width: 40px;
     height: 40px;
     margin-right: 12px;
   }
+
+  button {
+    padding-left: 0;
+    border-radius: 22px; /* user avatar + 2px to ensure no white space */
+    .user-avatar {
+      margin-right: 12px;
+      border-radius: 20px;
+    }
+  }
+
 }
