--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,9 +64,18 @@ body, html {
   height: 100%;
 }
 
-// respect material design guidelines by uppercasing all button text
 button {
-  text-transform: uppercase;
+  text-transform: uppercase; // respect material design guidelines by uppercasing all button text
+}
+
+/* endregion */
+
+/* region COMMON */
+
+.user-avatar {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
 }
 
 /* endregion */
