--- a/src/app/reusables/toolbar/toolbar.component.html
+++ b/src/app/reusables/toolbar/toolbar.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar *ngIf="currentUser">
-  <img class="logo" src="../assets/logo_transparent.png" alt="Sleek"/>
+  <img class="logo" fxHide [fxShow.gt-xs]="true" src="../assets/logo_transparent.png" alt="Sleek"/>
   <span>Conversations</span>
   <span fxFlex></span>
   <button (click)="logout()"
-          color="primary" mat-stroked-button>
+          mat-stroked-button>
     <img class="user-avatar" [src]="currentUser?.photoURL" alt="your avatar"/>
     <span>Sign out</span>
   </button>
