--- a/src/app/pages/authentication/authentication.page.html
+++ b/src/app/pages/authentication/authentication.page.html
@@ -1,4 +1,4 @@
-<div class="authentication-page" fxLayout="column" fxLayoutAlign="center center" fxFill>
+<div class="authentication-page" fxLayout="column" fxLayoutAlign="center center">
   
   <div class="authentication-welcome-container"
        *ngIf="(!loginInProgress || auth.state.value); else notAuthenticated"
