feat(app): auto-scroll based on new messages received

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,6 +60,11 @@ table {
 
 /* region CUSTOM OVERRIDES */
 
+html, body {
+  height: 100%;
+  overflow: hidden;
+}
+
 button {
   text-transform: uppercase; // respect material design guidelines by uppercasing all button text
 }
