--- a/src/app/reusables/components/toolbar/toolbar.component.html
+++ b/src/app/reusables/components/toolbar/toolbar.component.html
@@ -1,9 +1,10 @@
 <mat-toolbar *ngIf="currentUser">
-  <img class="logo" fxHide [fxShow.gt-xs]="true" src="../assets/logo_transparent.png" alt="Sleek"/>
+  <button *ngIf="canNavigateBack$ | async" class="back-button" routerLink=".." mat-icon-button aria-label="back button">
+    <mat-icon>arrow_back</mat-icon>
+  </button>
   <span>Conversations</span>
   <span fxFlex></span>
-  <button (click)="logout()"
-          mat-stroked-button>
+  <button class="sign-out" (click)="logout()" mat-stroked-button>
     <img class="user-avatar" [src]="currentUser?.photoURL" alt="your avatar"/>
     <span>Sign out</span>
   </button>
