feat(app): make reactive toolbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -75,8 +75,8 @@ button {
 
 .user-avatar {
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 32px;
+  height: 32px;
 }
 
 /* endregion */
@@ -89,6 +89,10 @@ button {
 
 .no-padding {
   padding: 0 !important;
+}
+
+.full-width {
+  width: 100%;
 }
 
 /* endregion */
