--- a/src/app/reusables/components/toolbar/toolbar.component.html
+++ b/src/app/reusables/components/toolbar/toolbar.component.html
@@ -1,11 +1,21 @@
 <mat-toolbar *ngIf="currentUser">
-  <button *ngIf="canNavigateBack$ | async" class="back-button" routerLink=".." mat-icon-button aria-label="back button">
-    <mat-icon>arrow_back</mat-icon>
-  </button>
-  <span>Conversations</span>
-  <span fxFlex></span>
-  <button class="sign-out" (click)="logout()" mat-stroked-button>
-    <img class="user-avatar" [src]="currentUser?.photoURL" alt="your avatar"/>
-    <span>Sign out</span>
-  </button>
+  <div *ngIf="currentConversation$ | async as conversation" fxLayout="row" fxLayoutAlign="start center">
+    <button class="back-button" routerLink=".." mat-icon-button aria-label="back button">
+      <mat-icon>arrow_back</mat-icon>
+    </button>
+    <img class="user-avatar" [src]="conversation?.users[0].avatarURL" alt="avatar"/>
+    <span>{{conversation?.users[0].fullName}}</span>
+  </div>
+  
+  <div *ngIf="!(currentConversation$ | async)" class="full-width" fxLayout="row" fxLayoutAlign="start center">
+    <span>Conversations</span>
+    
+    <span fxFlex></span>
+    
+    <button (click)="logout()"
+            mat-button>
+      <span>Sign out</span>
+    </button>
+  </div>
+
 </mat-toolbar>
