--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-toolbar [currentUser]="currentUser | async"></app-toolbar>
+<app-toolbar [currentUser]="currentUser$ | async"></app-toolbar>
 
 <router-outlet></router-outlet>
