--- a/src/app/reusables/components/toolbar/toolbar.component.html
+++ b/src/app/reusables/components/toolbar/toolbar.component.html
@@ -3,8 +3,8 @@
     <button class="back-button" routerLink=".." mat-icon-button aria-label="back button">
       <mat-icon>arrow_back</mat-icon>
     </button>
-    <img class="user-avatar" [src]="conversation?.users[0].avatarURL" alt="avatar"/>
-    <span>{{conversation?.users[0].fullName}}</span>
+    <img class="user-avatar" [src]="conversation.users[0]?.avatarURL" alt="avatar"/>
+    <span>{{conversation.users[0]?.fullName}}</span>
   </div>
   
   <div *ngIf="!(conversationsDrawable$ | async)" class="full-width" fxLayout="row" fxLayoutAlign="start center">
